@@ -1,9 +1,9 @@
-/*	$NetBSD: bozohttpd.h,v 1.33.2.5 2016/12/23 07:42:09 snj Exp $	*/
+/*	$NetBSD: bozohttpd.h,v 1.33.2.6 2017/02/12 22:07:17 snj Exp $	*/
 
 /*	$eterna: bozohttpd.h,v 1.39 2011/11/18 09:21:15 mrg Exp $	*/
 
 /*
- * Copyright (c) 1997-2015 Matthew R. Green
+ * Copyright (c) 1997-2017 Matthew R. Green
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
